tests/ui/diagnostic-not-implemented-from-zeros.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-from-zeros.rs:16:24
   |
16 |     takes_from_zeros::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromZeros` is not implemented for `NotZerocopy`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromZeros)]` to `NotZerocopy`
   = help: the following other types implement trait `FromZeros`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 141 others
note: required by a bound in `takes_from_zeros`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-from-zeros.rs:19:24
   |
19 | fn takes_from_zeros<T: FromZeros>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_zeros`
   = note: the full name for the type has been written to '/long-type-HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
